# src/index.js
@@ -4,7 +4,9 @@ import swaggerUi from "swagger-ui-express";
 import fs from "fs";
 import YAML from "yaml";
 import authRoutes from "./routes/auth.js";
+import userRoutes from "./routes/user.js";
 import cors from "cors";
+import morgan from "morgan";
 
 dotenv.config();
 
@@ -12,6 +14,7 @@ const app = express();
 app.use(express.json());
 app.use(express.urlencoded({ extended: true }));
 app.use(cors());
+app.use(morgan("dev"));
 
 // Swagger
 const swaggerDocument = YAML.parse(fs.readFileSync("./swagger.yaml", "utf8"));
@@ -27,6 +30,7 @@ app.get("/health", (req, res) => {
 });
 
 app.use("/api/auth", authRoutes);
+app.use("/api/users", userRoutes);
 
 const PORT = process.env.PORT || 3000;
 app.listen(PORT, () => {
